--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo AWS_REGION=$AWS_REGION
+      - echo ECR_REPO_URI=$ECR_REPO_URI
       - aws --version
       - docker --version
       - aws ecr get-login-password --region $AWS_REGION |
@@ -11,18 +12,11 @@ phases:
 
   build:
     commands:
-      - echo Build started on `date`
-      - echo Building the Docker image...
-      - docker build -t capstone-1:$IMAGE_TAG .
+      - echo Building Docker image...
+      - docker build -t capstone-1:latest .
 
   post_build:
     commands:
-      - echo Build completed on `date`
-      - echo Tagging image...
-      - docker tag capstone-1:$IMAGE_TAG $ECR_REPO_URI:$IMAGE_TAG
-      - echo Pushing image to Amazon ECR...
-      - docker push $ECR_REPO_URI:$IMAGE_TAG
-
-artifacts:
-  files:
-    - '**/*'
+      - echo Pushing image to ECR...
+      - docker tag capstone-1:latest $ECR_REPO_URI:latest
+      - docker push $ECR_REPO_URI:latest
